# darkbotx

./: .gitignore  GEMINI.md  LICENSE  README.md  TODO.md  main.py  play.py  pyproject.toml  setup.ps1  setup.sh
assets/DarkCube/: DarkCube.urdf
assets/DarkCube/meshes/: Component1.stl
assets/Hiwonder/: Hiwonder.urdf
assets/Hiwonder/meshes/: left_finger_1.stl  left_silicone_1.stl  right_finger_1.stl  right_ilicone_1.stl  second_link_1.stl  sixth_link_1.stl
assets/Hiwonder_description/: CMakeLists.txt  Hiwonder.urdf  README.md
assets/Hiwonder_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
assets/Hiwonder_mjcf/: Hiwonder.xml
assets/Hiwonder_urdf/: Hiwonder.urdf
assets/Hiwonder_urdf_simplified/: Hiwonder.urdf
assets/_Hiwonder_description/: Hiwonder.urdf  package.xml
assets/box/: box.urdf
assets/cube/: cube.urdf
assets/rect/: rect.urdf
assets/star/: star.urdf
code/: _pointnet.py  env.py  flex.py  gripper_close.py  gripper_disengage.py  gripper_engage.py  monitor.py  motor.py  pointnet.py  robot.py  runner.py  scanner.py  sensor.py  servo.py  test_run.py  wrapper.py
resources/: PPO_Training_Config.md  architecture.md  resources.md  rl_training_graph_analysis.md
src/: config.py  env.py  environment.py  eval.py  export.py  gripper_close.py  gripper_disengage.py  gripper_engage.py  interactive.py  logger_setup.py  monitor.py  pointnet.py  robot.py  run.py  runner.py  scanner.py  sensor.py  test_2d_peripheral.py  test_auto_load_environment.py  test_manual.py  train.py
test/: test_franka_cube_grab.py  test_franka_joints.py  test_grab_cube_auto.py  test_hiwonder_joints.py  test_motors_sensors.py  test_run.py  test_sensor_GPIO.py  test_sensor_ads.py  test_servo_.py  test_servo_manual_pwm.py  test_simulated_runner.py  test_train.py  test_urdf.py  test_urdf_joints_full_movement.py  test_urdf_manual.py
tools/: README.md
(+27 files in other folders)
