[project]
name = "darkbotx"
version = "0.1.0"
description = "A visionless grasping robot"
readme = "README.md"
authors = [
  { name = "Avik Md Emtiaz Arefin" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "mapbox-earcut>=2.0.0",
    "numpy-stl>=3.2.0",
    "urdf-parser-py>=0.0.4",
    "rsl-rl-lib>=5.4.1",
    "torch>=2.10.0",
    "tensorboard>=2.20.0",
    "adafruit-circuitpython-servokit>=1.3.22",
    "adafruit-circuitpython-ads1x15>=3.0.2",
    "grpcio!=1.78.1",
    "rpi-lgpio>=0.6; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pygame>=2.6.1",
    "genesis-world>=1.2.1",
    "mtrick>=0.2.0",
    "shapely>=2.1.2",
]

[tool.pyrefly]
preset = "strict"
strict-callable-subtyping = true
spec-compliant-overloads = true

